#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([vimduino], [0.1], [martin.habovstiak@gmail.com])
AC_CONFIG_SRCDIR([infiniteread.c])

# Checks for programs.
AC_PROG_CC
#AC_PROG_INSTALL

# Checks for header files.
AC_CHECK_HEADERS([unistd.h])

AC_CONFIG_FILES([Makefile
		 vimduino])
AC_OUTPUT
